@@ -4,7 +4,7 @@
       "papix <mail@papix.net>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.9.0, CPAN::Meta::Converter version 2.131560",
+   "generated_by" : "Minilla/v2.1.0, CPAN::Meta::Converter version 2.140640",
    "license" : [
       "perl_5"
    ],
@@ -33,15 +33,14 @@
       },
       "configure" : {
          "requires" : {
-            "CPAN::Meta" : "0",
-            "CPAN::Meta::Prereqs" : "0",
             "Module::Build" : "0.38"
          }
       },
       "develop" : {
          "requires" : {
             "Test::CPAN::Meta" : "0",
-            "Test::MinimumVersion" : "0.10108",
+            "Test::MinimumVersion::Fast" : "0.04",
+            "Test::PAUSE::Permissions" : "0.04",
             "Test::Pod" : "1.41",
             "Test::Spellunker" : "v0.2.7"
          }
@@ -58,14 +57,13 @@
    "release_status" : "unstable",
    "resources" : {
       "bugtracker" : {
-         "web" : "https://github.com/papix/Acme-SuddenlyDeath/issues"
+         "web" : "ssh://git@github.com/papix/Acme-SuddenlyDeath/issues"
       },
-      "homepage" : "https://github.com/papix/Acme-SuddenlyDeath",
+      "homepage" : "ssh://git@github.com/papix/Acme-SuddenlyDeath",
       "repository" : {
-         "type" : "git",
-         "url" : "git://github.com/papix/Acme-SuddenlyDeath.git",
-         "web" : "https://github.com/papix/Acme-SuddenlyDeath"
+         "url" : "ssh://git@github.com/papix/Acme-SuddenlyDeath.git",
+         "web" : "ssh://git@github.com/papix/Acme-SuddenlyDeath"
       }
    },
-   "version" : "0.08"
+   "version" : "0.09"
 }
