@@ -1,9 +1,10 @@
 Revision history for Perl extension Acme::SuddenlyDeath
 
 {{$NEXT}}
+        - Fix bug in sudden-death command.
 
 0.08 2013-11-22T07:13:14Z
-        - Delete suddely_death/suddely_death_single function. 
+        - Delete suddely_death/suddely_death_single function.
 
 0.07 2013-06-16T14:01:17Z
         - Fix bug in sudden-death command.
